[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"
packages = [{include = "db", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = "^1.4.44"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
