[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"
packages = [{include = "db", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
sqlalchemy = "1.4.25"
psycopg2 = "2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
